The null scan reaches every level of an identity-copied container, however it is declared (#875)
A null inside a container copied by identity is meant to come back from
parse as a located error. The scan only looked inside a component declared
as exactly List, Set, Map or an array, and only one level down, so a null in
List<List<String>> or Map<String, List<String>>, or inside an ArrayList, a
Collection or a LinkedHashMap, parsed as Valid and reached the domain.

NullScan now works out the scan from the component's declared type, at
every level it names: any Collection or Map, a reference array, and an
Optional holding a container, whether declared through a subtype, a
supertype, a raw type, a wildcard argument or a type variable bounded by
one. A null locates at its full path (grid.0.1, byKey.k.1) on parse, the
validated patch, the sparse UpdateSpec tier, a bridged component and the
fallible @GenerateMerge alike, and the values a @MapKey map copies are
scanned through parseEntries. The emitted helpers return their argument's
own type, which is what lets a subtype stay a subtype, and it types a raw
container and a sparse wildcard container too, so both lose the exclusions
they had. The IDENTITY_ELEMENTS and IDENTITY_MAP kinds give way to IDENTITY
carrying its scan, and the merge processor shares the one model.

The walk always ends: a container class that fixes its own element
(class Node extends ArrayList<Node>) is followed once, and where it recurs
its elements are checked for null but not scanned inside. The element
types a scan's lambdas infer join the raw-type suppression, since a
container's own declaration can name a raw type the component does not.

Fixes #875.